# zmpi_reduce

./: CMakeLists.txt  README
dblv/: CMakeLists.txt  dblv.h  dblv_gcrypt.c  dblv_io.c  dblv_mpi.c  dblv_rle.h  dblv_rle_zero.c  dblv_rle_zero_add.c  dblv_rw.c  dblv_zlib.c
reduce/: CMakeLists.txt  debug.h  logging.c  logging.h  memory.c  memory.h  mpi_reduce_common.c  mpi_reduce_common.h  mpi_reduce_gather.c  mpi_reduce_gather.h  mpi_reduce_gather_rle.c  mpi_reduce_pipe.c  mpi_reduce_pipe.h  mpi_reduce_pipe_isend_irecv.c  mpi_reduce_pipe_send_recv.c  mpi_reduce_pipe_sendrecv.c  mpi_reduce_pipe_sendrecv_rle.c  mpi_reduce_pipe_stream.c  mpi_reduce_pipe_stream_plain.c  mpi_reduce_pipe_stream_rle.c  mpi_reduce_rabenseifner.c  mpi_reduce_rabenseifner.h  reduce_op.c  reduce_op.h  timing.h  trace.c  trace.h  zmpi_reduce.h
tests/: CMakeLists.txt  tests.c
